@@ -795,6 +795,8 @@ EPSON Stylus CX-3100
 EPSON Stylus CX-3200
 EPSON Stylus CX-5100
 EPSON Stylus CX-5200
+EPSON Stylus CX-5300
+EPSON Stylus CX-5400
 EPSON Stylus CX-6300
 EPSON Stylus CX-6400
 EPSON Stylus CX-8300
@@ -1116,6 +1118,8 @@ Epson Stylus CX3100            escp2-cx3100    EPSON Stylus CX-3100
 Epson Stylus CX3200            escp2-cx3200    EPSON Stylus CX-3200
 Epson Stylus CX5100            escp2-cx5100    EPSON Stylus CX-5100
 Epson Stylus CX5200            escp2-cx5200    EPSON Stylus CX-5200
+Epson Stylus CX5300            escp2-cx5300    EPSON Stylus CX-5300
+Epson Stylus CX5400            escp2-cx5400    EPSON Stylus CX-5400
 Epson Stylus CX6300            escp2-cx6300    EPSON Stylus CX-6300
 Epson Stylus CX6400            escp2-cx6400    EPSON Stylus CX-6400
 Epson Stylus CX8300            escp2-cx8300    EPSON Stylus CX-8300
